<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    
    <LinearLayout android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

 
    <TextView android:id="@+id/TextViewTitle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/phone_verification"
	    android:textSize="7pt"
	    android:padding="15dp">
	</TextView>

    

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bdbdbd"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:padding="10dp"/>
    
    <TextView android:id="@+id/TextViewTitle2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/phone_verification2"
	    android:textSize="7pt"
	    android:padding="15dp"/>
    
        <TextView android:id="@+id/YourCountry"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/country"
		    android:textSize="5pt"
		    android:paddingLeft="15dp"
		    android:paddingRight="15dp"
		    android:layout_marginTop="15dp"/>
        
        <!--  
        <Spinner android:id="@+id/CountryList"
		    android:layout_height="wrap_content"
		    android:layout_width="fill_parent"
		    android:entries="@array/country_list"
		    android:paddingRight="15dp"
		    android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"/>
        -->
        
       
        
        <Spinner android:id="@+id/CountryList"
		    android:layout_height="wrap_content"
		    android:layout_width="fill_parent"
		    android:entries="@array/countryList"
		    android:paddingRight="15dp"
		    android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"/>
        
        <TextView android:id="@+id/CountryCodePhoneNo"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/country_code_phone_number"
		    android:textSize="5pt"
		    android:paddingLeft="15dp"
		    android:paddingRight="15dp"
		    android:layout_marginTop="15dp"/>
        
        <LinearLayout android:layout_width="fill_parent"
	        android:orientation="horizontal"
	        android:layout_height="fill_parent"
	        android:paddingRight="15dp"
		    android:layout_marginLeft="15dp">
        
	        <Spinner android:id="@+id/CountryZipCode"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:entries="@array/countryZipCode"
			    android:layout_weight="1"/>

	       <EditText android:id="@+id/PhoneNumber"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:inputType="phone"
			    android:layout_weight="12"/>

	        <Button
		     	android:text="OK"
		        android:id="@+id/RegistrationOk"
		        android:textSize="7pt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="10dip"
		        android:layout_weight="1"/>

        </LinearLayout>
        
        <TextView android:id="@+id/IncorrectPhoneNumber"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/incorrectPhoneNumber"
		    android:textSize="5pt"
		    android:paddingLeft="15dp"
		    android:paddingRight="15dp"
		    android:layout_marginTop="15dp"
		    android:textColor="#ff0000"
		    android:visibility="invisible"/>
        
    
    
    
    
    </LinearLayout>
</ScrollView>